--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,22 +1,20 @@
 <div class="container">
-  <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
+  <header><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrNMYZEp6-zOD8fEYvSYkusYNZPl2w9kXbxMg376vNiepuVZ_Z&s"></header>
   <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
+    <h2>Botto's Sportsbook</h2>
 
     <div class="content">
-      <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
-      as expected. To get started, delete this file (<code>app/views/welcome.erb)</code> and begin adding
-      your own actions to <code>application_controller.rb</code>. For more information, see the <a href="https://github.com/thebrianemory/corneal">README</a>.</p>
+      <p>Welcome to Botto's Sportsbook!</p>
+      <p>We are supported by your two favorite leaders in the industry, DraftKings and Fanduel.</p>
     </div>
 
     <div class="sidebar">
-      <h3>Environment</h3>
-      <ul>
-        <li><b>Ruby:</b> <%= RUBY_VERSION %></li>
-        <li><b>Environment:</b> <%= ENV["RACK_ENV"] %></li>
-        <li><b>Server:</b> <%= @env["SERVER_SOFTWARE"] %></li>
-        <li><b>Port:</b> <%= @env["SERVER_PORT"] %></li>
-      </ul>
+      <h3>Please login to place your bets!</h3>
+      <form>
+        <p> Email: <input type="email"></p>
+        <p> Password: <input type="password"></p>
+        <input type="submit">
+      </form>
     </div>
 
   </div>
