--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -9,12 +9,14 @@
     </div>
 
     <div class="sidebar">
-      <h3>Please login to place your bets!</h3>
+      <p>Please login or create your account to place bets!</p>
       <form>
         <p> Email: <input type="email"></p>
         <p> Password: <input type="password"></p>
         <input type="submit">
       </form>
+      
+      <footer><a href="/signup">Create Account</a></footer>
     </div>
 
   </div>
