edit views names, move all user views into user folder under views, organize code for controllers, unable to catch session email params bindingpry shows nil after logged in or signed up

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,9 +1,9 @@
 <h1>Create Account</h1>
-<form action="/signup" method="post">
+<form action="/user/homepage" method="post">
   <br>
   <div>
-    <label for="username">Username:</label>
-    <input type="text" name="user[username]" id="username">
+    <label for="email">Email:</label>
+    <input type="email" name="user[email]" id="email">
   </div>
   <br>
   <div>
