--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -9,14 +9,9 @@
     </div>
 
     <div class="sidebar">
-      <p>Please login or create your account to place bets!</p>
-      <form>
-        <p> Email: <input type="email"></p>
-        <p> Password: <input type="password"></p>
-        <input type="submit">
-      </form>
-      
-      <footer><a href="/signup">Create Account</a></footer>
+      <p>Please login or create an account to place bets!</p>
+      <p><a href="/login">Login</a></p>
+      <p><a href="/signup">Create Account</a></p>
     </div>
 
   </div>
