migrate users table, edit html in all views, create wager form in place wager view, re-organize controllers, add get post to user and wager controllers, add rake flash gem and sysrandom, edit session secret, add helpers to app controller

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,5 +1,5 @@
 <h1>Create Account</h1>
-<form action="/user/homepage" method="post">
+<form action="/user" method="post">
   <br>
   <div>
     <label for="email">Email:</label>
