--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-    <form action='/user/homepage' method="POST">
+    <form action='/login' method="POST">
         <p> Email: <input type="email" name="user[email]" id="email"></p>
         <p> Password: <input type="password" name="user[password]" id="password"></p>
         <input type="submit" value="Login">
