multiple changes in attempt to get sessions save properly, keep getting nil values after my signups/logins but successfully able to deny logins to users who have not signed up yet

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,14 +1,19 @@
 <h1>Create Account</h1>
-<form action="/user" method="post">
+<form action="/signup" method="POST">
+  <br>
+  <div>
+    <label for="name">Username:</label>
+    <input type="text" name="name" id="name">
+  </div>
   <br>
   <div>
     <label for="email">Email:</label>
-    <input type="email" name="user[email]" id="email">
+    <input type="email" name="email" id="email">
   </div>
   <br>
   <div>
     <label for="password">Password:</label>
-    <input type="password" name="user[password]" id="password">
+    <input type="password" name="password" id="password">
   </div>
   <br>
   <input type="submit" value="Create Account">
