--- a/app/views/User/homepage.erb
+++ b/app/views/User/homepage.erb
@@ -1,4 +1,7 @@
 <h1>Welcome to your dashboard, <%=@user.email%>!</h1>
+    <div class="pull-right">
+      <a href="/sessions/logout">Log Out</a>
+    </div>
 
     <div class="content">
       <h3>User Stats</h3>
@@ -6,7 +9,10 @@
     </div>
 
     <div class="sidebar">
-      <p></p>
       <p><a href="/user/place_wager">Place, edit, or delete a bet</a></p>
       <p><a href="/live_bets">Active Bets</a></p>
     </div>
+
+    <%# <footer class="sidebar">
+    <a href="/sessions/logout">Log Out</a>
+    </footer> %>
