--- a/app/views/User/live_bets.erb
+++ b/app/views/User/live_bets.erb
@@ -1,2 +1,11 @@
 <h1>Live Bets</h1>
-<p>Here is a list of your active bets:</p>
+    <p>Here is a list of your active bets:</p>
+    <br>
+    <div>
+        <p>Placeholder for list of bets</p>
+    </div>
+    <br>
+    <div>
+        <p><a href="/user/homepage">Return to Dashboard</a></p>
+    </div>
+
