create and migrate wagers table, refactor place wager view, add ability to save wagers placed by user and list all wagers user placed in wagercontroller and livebets view, edit classes to merge activebets and livebets into one wager class for now and update user class to has many wagers

--- a/app/views/User/live_bets.erb
+++ b/app/views/User/live_bets.erb
@@ -1,8 +1,10 @@
 <h1>Live Bets</h1>
-    <p>Here is a list of your active bets:</p>
+    <h3>Here is a list of your active bets:</h3>
     <br>
     <div>
-        <p>Placeholder for list of bets</p>
+        <% @wager.each do |wager| %>
+            <p><a href="/live_bets/<%= wager.id %>"><%= wager.bet %> for $<%= wager.amount %></a></p>
+        <% end %>
     </div>
     <br>
     <div>
