create view to see all bets made on site with users kept anonymous, add link on homepage for all bets view, add get all bets to wager controller

--- a/app/views/User/homepage.erb
+++ b/app/views/User/homepage.erb
@@ -11,6 +11,7 @@
     <div class="sidebar">
       <p><a href="/user/place_wager">Place, edit, or delete a bet</a></p>
       <p><a href="/live_bets">Active Bets</a></p>
+      <p><a href="/all_bets">View All Bets</a></p>
     </div>
 
     <%# <footer class="sidebar">
