create edit wager view and add form content, add get and patch actions in wager controller to get wager attributes from current user and enable editing, post updated wager from edit wager view to live bets view, change wording in homepage and live bets view, add wager id label to each wager user has placed in live bets view, add notes throughout

--- a/app/views/User/homepage.erb
+++ b/app/views/User/homepage.erb
@@ -9,9 +9,9 @@
     </div>
 
     <div class="sidebar">
-      <p><a href="/user/place_wager">Place, edit, or delete a bet</a></p>
-      <p><a href="/live_bets">Active Bets</a></p>
-      <p><a href="/all_bets">View All Bets</a></p>
+      <p><a href="/user/place_wager">Place A Bet!</a></p>
+      <p><a href="/live_bets">View / Update Your Bets</a></p>
+      <p><a href="/all_bets">View All Bets </a></p>
     </div>
 
     <%# <footer class="sidebar">
