--- a/app/views/User/place_wager.erb
+++ b/app/views/User/place_wager.erb
@@ -1,3 +1,5 @@
+<%# This view is my new.erb renamed to place_wager (wagers are created here) %>
+
 <h1>Please place your wager below</h1>
 
 <form action="/user/live_bets" method="Post">
