--- a/app/views/all_bets.erb
+++ b/app/views/all_bets.erb
@@ -1,3 +1,5 @@
+<%# This view is my index.erb renamed to all_bets.erb (all bets are read here) %>
+
 <h1>All Bets Made With Botto's Sportsbook</h1>
     <h3>Here is a list of all active bets:</h3>
     <br>
