add delete functionality with new delete view, get and delete actions in wager controller, and link to delete a user's bet in the live bets view

--- a/app/views/User/edit_wager.erb
+++ b/app/views/User/edit_wager.erb
@@ -13,6 +13,8 @@
         <input type="integer" name="wager[amount]" id="amount" value="<%= @wager.amount %>">
     </div>
     <br>
+    <%# <div class="sidebar"> %>
         <input type="submit" value="Update Wager">
     </form>
+
 
