--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -5,7 +5,8 @@
 
     <div class="content">
       <p>Welcome to Botto's Sportsbook!</p>
-      <p>We are supported by your two favorite leaders in the industry, DraftKings and Fanduel.</p>
+      <p>Our daily MLB schedule below is supported by <a href="https://SportsData.io" target="_blank">SportsData</a> and our preferred betting partners are DraftKings and Fanduel.</p>
+      <%= Date.today.strftime("%Y-%b-%e") %>
     </div>
 
     <div class="sidebar">
@@ -15,4 +16,27 @@
     </div>
 
   </div>
+
 </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div class="container">
+    <h3>Here is a look at today's schedule:</h3>
+
+    <%= @api.daily_baseball %>
+  </div>
