--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -38,5 +38,5 @@
   <div class="container">
     <h3>Here is a look at today's schedule:</h3>
 
-    <%= @api.daily_baseball %>
+    <%= @sportsdata.daily_baseball %>
   </div>
