--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
 <h1>Login</h1>
     <form action='/login' method="POST">
-        <p> Email: <input type="user[email]" name="email" id="email"></p>
-        <p> Password: <input type="user[password]" name="password" id="password"></p>
+        <p> Email: <input type="email" name="email" id="email"></p>
+        <p> Password: <input type="password" name="password" id="password"></p>
         <input type="submit" value="Login">
     </form>
